# oobase

./: .gitattributes  .gitignore  Makefile.am  OOBase.doxyfile  OOBase.vcxproj  OOBase.vcxproj.filters  OOBase_vc10.sln  OOBase_vc8.sln  OOBase_vc9.sln  README.md  bootstrap.sh  configure.ac  msvcconf.xml
include/: Buffer.h  Makefile.am  config-autoconf.h.in  config-base.h  config-msvc.h  oobase-autoconf.h.in  oobase-msvc.h  oobase-platform.h.in
include/OOBase/: Allocator.h  ArenaAllocator.h  AsyncResponse.h  Atomic.h  BSDSocket.h  BTree.h  Bag.h  Base.h  BasicAllocator.h  BoundedQueue.h  Buffer.h  ByteSwap.h  CDRIO.h  CDRStream.h  Cache.h  CmdArgs.h  Condition.h  ConfigFile.h  CustomNew.h  DLL.h  Delegate.h  Destructor.h  Environment.h  File.h  GlobalNew.h  HandleTable.h  HashCache.h  HashTable.h  Iterator.h  List.h  Logger.h  Memory.h  Morton.h  Mutex.h  Once.h  Pool.h  Posix.h  PosixSocket.h  Proactor.h  Queue.h  (+30 more)
include/OOBase/internal/: BSDSocket.h  Win32Impl.h  Win32Socket.h
include/OOSvrBase/: CmdArgs.h  Database.h  Logger.h  Proactor.h  ProactorEv.h  ProactorWin32.h  SecurityWin32.h  Service.h  pw_info.h
include/OOSvrBase/internal/: ProactorEv.h  ProactorImpl.h  ProactorWin32.h
m4/: fuma_ax_ccache.m4  oo_c_builtins.m4
src/: ArenaAllocator.cpp  BSDSocket.cpp  BSDSocket.h  Buffer.cpp  Builtins.cpp  CmdArgs.cpp  Condition.cpp  ConfigFile.cpp  DLL.cpp  Database.cpp  Environment.cpp  Error.cpp  File.cpp  GetPeerUid.cpp  Logger.cpp  Makefile.am  Memory.cpp  Mutex.cpp  New.h  OOBase.vcxproj  OOBase.vcxproj.filters  OOBase_vc10.vcxproj  OOBase_vc10.vcxproj.filters  OOBase_vc8.vcproj  OOBase_vc9.vcproj  OOSvrBase.vcxproj  OOSvrBase.vcxproj.filters  OOSvrBase_vc10.vcxproj  OOSvrBase_vc10.vcxproj.filters  OOSvrBase_vc8.vcproj  OOSvrBase_vc9.vcproj  Once.cpp  PipeWin32.cpp  Posix.cpp  PosixSocket.cpp  Proactor.cpp  ProactorEv.cpp  ProactorEv.h  ProactorEvSocket.cpp  ProactorImpl.h  (+37 more)
test/ArgTest/: ArgTest.cpp
test/QueueTest/: QueueTest.cpp
