
nobase_include_HEADERS = \
	Atomic.h \
	Buffer.h \
	ByteSwap.h \
	CDRStream.h \
	Condition.h \
	DLL.h \
	Destructor.h \
	Mutex.h \
	Once.h \
	Queue.h \
	Singleton.h \
	SmartPtr.h \
	Socket.h \
	TLSSingleton.h \
	Thread.h \
	TimeVal.h \
	PosixSocket.h \
	Win32.h \
	Win32Socket.h \
	config-base.h \
	config-msvc.h \
	tr24731.h \
	utf8.h \
	CmdArgs.h \
	Database.h \
	Logger.h \
	Proactor.h \
	ProactorEv.h \
	ProactorWin32.h \
	pw_info.h \
	SecurityWin32.h
