
nobase_include_HEADERS = \
	.$(build_dir)/OOBase/config-autoconf.h \
	OOBase/version.h \
	OOBase/Atomic.h \
	OOBase/Buffer.h \
	OOBase/ByteSwap.h \
	OOBase/CDRStream.h \
	OOBase/Condition.h \
	OOBase/DLL.h \
	OOBase/Destructor.h \
	OOBase/Mutex.h \
	OOBase/Once.h \
	OOBase/Queue.h \
	OOBase/Singleton.h \
	OOBase/SmartPtr.h \
	OOBase/Socket.h \
	OOBase/TLSSingleton.h \
	OOBase/Thread.h \
	OOBase/TimeVal.h \
	OOBase/PosixSocket.h \
	OOBase/Win32.h \
	OOBase/Win32Socket.h \
	OOBase/config-base.h \
	OOBase/config-msvc.h \
	OOBase/tr24731.h \
	OOBase/utf8.h \
	OOBase/CmdArgs.h \
	OOBase/Database.h \
	OOBase/Logger.h \
	OOBase/Proactor.h \
	OOBase/ProactorEv.h \
	OOBase/ProactorWin32.h \
	OOBase/pw_info.h \
	OOBase/SecurityWin32.h
